fix inner label mobile alignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -108,6 +108,10 @@ ul, ol {
     margin-top: 5px;
   }
 
+  .inner--label {
+    top: 3px;
+  }
+
   h1.headline {
     font-size: 24px;
     margin: 0;
